# Chess-position-recognizer

./: LICENSE  README.md  setup.cfg
src/chessrec/: constants.py  data_generator.py  fen_transcode.py
src/chessrec/app/: app_buttons.py  app_main.py
src/chessrec/cmds/: chessrec_app.py  chessrec_generate_data.py  chessrec_train_recognizer.py
src/chessrec/cmds/generator_assets_example/chess_pieces/: README.txt
src/chessrec/engine_interface/stockfish/: interface.py  stockfish_with_lines.py
src/chessrec/models/: __init__.py  board_detector_v0.py  metrics.py  position_recognizer_v0.py
src/chessrec/models/trained_weights/: board_detector_v0.h5  position_recognizer_v0.h5
