[metadata]
name = chessrec
version = 0.0.1
author = Václav Miřátský
author_email = mirats.v@email.cz
description = Generating FEN from a screenshot of the chessboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tobespecified.cz
keywords = chess, FEN, screenshot
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    setuptools
    tensorflow>=2.12.0
    numpy
    pillow
    opencv-python
    stockfish
[options.packages.find]
where = src
[options.package_data]
chessrec =
    **/*.png
    **/*.jpg
    **/*.h5
[options.entry_points]
console_scripts =
    chessrec_app = chessrec.cmds.chessrec_app:main
    chessrec_generate_data = chessrec.cmds.chessrec_generate_data:main
    chessrec_train_recognizer = chessrec.cmds.chessrec_train_recognizer:main




